# SparkyEngine-2

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.minimal  CMakeLists.txt.simple  DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SUMMARY.md  build.bat  build.sh  build_and_run.bat  cmake_install.cmake  run.bat  run_game.ps1  vulkan_extension_test.cpp  vulkan_simple_test.cpp
Engine/: CMakeLists.txt  CMakeLists.txt.bak  CMakeLists.txt.simple  CMakeLists_minimal.txt  cmake_install.cmake  copy_shaders.bat  final_demo.cpp  modify.bat  modify.ps1  standalone_damage_test.cpp  standalone_progression_test.cpp  temp.txt  test_progress.txt
Engine/SparkyEngine.dir/Release/SparkyEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  SparkyEngine.lastbuildstate
Engine/assets/: engine.cfg
Engine/assets/textures/: brick.ppm  concrete.ppm  grass.ppm  metal.ppm  wood.ppm
Engine/include/: AIComponent.h  AdvancedAI.h  AdvancedAnimationSystem.h  AdvancedAudioEngine.h  AdvancedBehaviorTree.h  AdvancedParticleSystem.h  AdvancedWeaponSystem.h  AmmoItem.h  Animation.h  AnimationComponent.h  AnimationController.h  AssetManager.h  AudioComponent.h  AudioEngine.h  BallisticsSystem.h  BehaviorTree.h  BehaviorTreeExample.h  BossEnemy.h  Button.h  Camera.h  CharacterController.h  CollisionSystem.h  Component.h.bak  Config.h  DamageFeedbackComponent.h  DirectionalLight.h  Enemy.h  EngineDemo.h  EventSystem.h  ExampleState.h  FastEnemy.h  FileUtils.h  GUIElement.h  GUIManager.h  GameEntity.h  GameObject.h  GameObject.h.bak  GunImpl.h  HealthComponent.h  InputManager.h  (+54 more)
Engine/include/Bullet/: BulletCollisionShapeComponent.h  BulletCollisionShapeComponentGLM.h  BulletCollisionShapeComponent_new.h  BulletConstraintComponent.h  BulletConstraintComponentGLM.h  BulletPhysicsWorld.h  BulletRigidBodyComponent.h
Engine/shaders/: advanced.frag  advanced.frag.spv  advanced.vert  advanced_pbr.frag  advanced_pbr.vert  basic.frag  basic.frag.spv  basic.vert  basic.vert.spv  compile_advanced_shaders.bat  compile_shaders.bat  material.frag  material.frag.spv  material.vert.spv  pbr.frag  pbr.vert  skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv
Engine/src/: AIComponent.cpp  AdvancedAI.cpp  AdvancedAnimationSystem.cpp  AdvancedAudioEngine.cpp  AdvancedBehaviorTree.cpp  AdvancedParticleSystem.cpp  AdvancedWeaponSystem.cpp  AmmoItem.cpp  Animation.cpp  AnimationComponent.cpp  AnimationController.cpp  AssetManager.cpp  AudioComponent.cpp  AudioEngine.cpp  BallisticsSystem.cpp  BehaviorTree.cpp  BehaviorTreeExample.cpp  BossEnemy.cpp  Button.cpp  Camera.cpp  CharacterController.cpp  CollisionSystem.cpp  Component.cpp  Config.cpp  DamageFeedbackComponent.cpp  DirectionalLight.cpp  Enemy.cpp  EngineDemo.cpp  EventSystem.cpp  ExampleState.cpp  FastEnemy.cpp  FileUtils.cpp  GUIElement.cpp  GUIManager.cpp  GameEntity.cpp  GameObject.cpp  Gun.cpp  GunImpl.cpp  HealthComponent.cpp  InputManager.cpp  (+121 more)
Engine/src/Bullet/: BulletCollisionShapeComponent.cpp  BulletConstraintComponent.cpp  BulletPhysicsWorld.cpp  BulletRigidBodyComponent.cpp  temp.cpp
Game/: CMakeLists.txt  CMakeLists.txt.simple  cmake_install.cmake
Game/assets/: advanced_level.json  complex_level.json  half_life_castle_wolfenstein_level.json  level1.json  sample_level.json
Game/src/: AudioDemo.cpp  AudioDemo.h  AudioTest.cpp  Enemy.cpp  Enemy.h  Enemy.h.bak  EnhancedPhysicsDemo.cpp  EnhancedPhysicsDemo.h  ExampleGame.cpp  ExampleGame.h  Gun.cpp  Gun.h  GunImpl.cpp  GunImpl.h  Level.cpp  Level.h  LevelManager.cpp  LevelManager.h  PBRExample.cpp  PBRExample.h  PBRTest.cpp  PhysicsDemo.cpp  PhysicsDemo.h  PhysicsTest.cpp  Platform.cpp  Platform.h  Player.cpp  Player.h  context_examplegame.cpp  half_life_castle_wolfenstein_demo.cpp  isolated_examplegame.cpp  level_3d_demo.cpp  level_loader_demo.cpp  main.cpp  mesh_link_test.cpp  mesh_test_fix.cpp  minimal_examplegame.cpp  minimal_game.cpp  simple_demo.cpp  test_components.cpp  (+2 more)
SimpleGame/: CMakeLists.txt  SimpleGame.cpp
x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
